# rock-paper-scissors

./: .gitignore  README.md  pyproject.toml
src/: game.py  main.py  player.py
src/data/: name_generator.py  player_names.csv
tests/: test_game.py
