[tool.poetry]
name = "rock-paper-scissors"
version = "0.1.0"
description = ""
authors = ["ChristopherGS <christopher.samiullah@gmail.com>"]
readme = "README.md"
packages = [{include = "rock_paper_scissors"}]

[tool.poetry.dependencies]
python = ">=3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
